src/Components/controls/controls.css
.controls {
    padding: 1rem;
    background-color: var(--bg-2);
    border-radius: 0.5rem;
    gap: 1.5rem;
    grid-area: controls;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.controls__header {
    display: flex;
    gap: 0.25rem;
}

.controls__title {
    font-size: 1.5rem;
    color: var(--accent-2);
    font-weight: 600;
    text-transform: uppercase;
}

.controls__body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 1.5rem;
}

.controls__button {
    width: 100%;
    background-color: var(--confirm);
    color: var(--txt);
    border-radius: 0.25rem;
    padding: 0.75rem;
    font-size: 1rem;
    outline: none;
    border: none;
    cursor: pointer;
    transition: 300ms;
}

.controls__button:hover {
    background-color: var(--confirm-hover);
}

.controls__button--active {
    background-color: var(--confirm);
}

.controls__button--active:hover {
    background-color: var(--confirm-hover);
}

.controls__button--disabled {
    background-color: var(--bg-0);
    color: var(--bg-2);
    cursor: not-allowed;
}

.controls__button--disabled:hover {
    background-color: var(--bg-0);
}

.controls__body {
    height: 100%;
    max-height: 100%;
}

